# tmdbsimple

./: .gitignore  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-package.yml  python-publish.yml
test/: .test_tmdbsimple.py.swo  test_tmdbsimple.py
tests/: __init__.py  keys.py  keys.py.TEMPLATE  test_account.py  test_base.py  test_changes.py  test_configuration.py  test_discover.py  test_find.py  test_genres.py  test_movies.py  test_people.py  test_requests_session.py  test_search.py  test_tv.py  test_watch_providers.py
tmdbsimple/: __init__.py  account.py  base.py  changes.py  configuration.py  discover.py  find.py  genres.py  movies.py  people.py  search.py  tmdbsimple.py  tv.py  watch_providers.py
